--- a/Sistema LibBug/src/View/Obra.form
+++ b/Sistema LibBug/src/View/Obra.form
@@ -772,6 +772,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="textEstoqueTotal">
               <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textEstoqueTotalKeyPressed"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textEstoqueTotalKeyTyped"/>
               </Events>
               <Constraints>
