--- a/Sistema LibBug/src/View/Obra.form
+++ b/Sistema LibBug/src/View/Obra.form
@@ -819,6 +819,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="textEstoqueDisponivel">
               <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textEstoqueDisponivelActionPerformed"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textEstoqueDisponivelKeyTyped"/>
               </Events>
               <Constraints>
